# market-making-rnd

./: .gitignore  CLAUDE.md  config.toml  config.toml.example
Code/backtesting-engine/: pyproject.toml
Code/backtesting-engine/bt_engine/: __init__.py  config.py  runner.py  types.py  units.py
Code/backtesting-engine/bt_engine/analytics/: __init__.py  journal.py  metrics.py  pnl.py
Code/backtesting-engine/bt_engine/data/: loader.py  schema.py  store.py
Code/backtesting-engine/bt_engine/engine/: internal_queue.py  loop.py
Code/backtesting-engine/bt_engine/execution/: fill_engine.py  fill_engine_snapshot.py  latency.py  order.py  queue_position.py
Code/backtesting-engine/bt_engine/fair_value/: manager.py  pricer.py
Code/backtesting-engine/bt_engine/portfolio/: __init__.py  positions.py  settlement.py
Code/backtesting-engine/bt_engine/strategy/: __init__.py  interface.py  probability_quoting.py
Code/backtesting-engine/output/nvda-poc/: fills.csv  summary.txt
Code/backtesting-engine/scripts/: run_nvda_poc.py
Code/scripts/: bl_granularity_test.py  discover_markets.py  download_iv_granularity.py  download_options.py  download_telonex.py  validate_data.py
Vault/: Research Index.md  btc-backtesting-engine.md  polymarket-stock-index-mm-research-brief.md
Vault/.obsidian/: graph.json
Vault/Archive/: Backtesting-Plan.md  Data-Download-Plan.md  Engine-Implementation-Reference.md
Vault/Backtester v1.0/: AUDIT-REPORT.md  Phase-1-Data-Acquisition.md  Phase-1-Progress-Report.md  Phase-2-Data-Alignment.md  Phase-3-Core-Engine.md  Phase-4-Fair-Value-Strategy.md  (+2 more)
(+35 files in other folders)
