[project]
name = "bt-engine"
version = "0.1.0"
description = "Deterministic backtesting engine for Polymarket binary event market making"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=15.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.5"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["bt_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
